# PYModuleTest

./: .gitignore  CMakeLists.txt  CMakePresets.json  class.c  class.h  class_py.c  class_py.h  module.c  setup.py  test.c  test.py
